Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Osiris-faces by CristianUrbainski</title>
+    <title>Osiris-Faces by CristianUrbainski</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Osiris-faces</h1>
+        <h1>Osiris-Faces</h1>
         <h2>Componentes JSF baseados nos componentes do Twitter Bootstrap.</h2>
         <a href="https://github.com/CristianUrbainski/osiris-faces" class="button"><small>View project on</small>GitHub</a>
       </div>
