Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,36 +29,33 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="bem-vindo-ao-osiris-faces" class="anchor" href="#bem-vindo-ao-osiris-faces"><span class="octicon octicon-link"></span></a>Bem-vindo ao Osiris-Faces</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Osiris-Faces é um projeto de componentes JSF com a identidade visual do Twitter Bootstrap para que seja mais bonito aos olhos do usuário, você pode fazer um fork do projeto e conhece-lo, e passar a usa-lo nos seus projetos, e está livre para criar mais componentes e ajudar outros desenvolvedores de software com suas contribuições no projeto, este projeto nasceu durante o meu projeto de TCC, quando eu quis alguns componentes visualmente mais bonitos do que aqueles que já existiam e decidi criar meus próprios componentes.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<h3>
+<a name="usando-o-osiris-faces" class="anchor" href="#usando-o-osiris-faces"><span class="octicon octicon-link"></span></a>Usando o Osiris-Faces</h3>
+
+<p>Depois de estar com a lib do Osiris-Faces no classpath do seu projeto web, você pode começar a usa-lo, primeiro você deve adicionar o namespace do projeto a sua página xhtml, desta maneira:</p>
+
+<pre><code>xmlns:osiris="http://osiris.faces.com/ui/bootstrap"
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>Depois disso você já terá todos os componentes desta biblioteca disponíveis para você, para a exemplificação dos componentes disponíveis há um projeto no github disponível para que vocês novos usuários do Osiris-Faces possam ter exemplos reais em um sistema de como utilizar os componentes, o projeto está disponível em:</p>
+
+<p><a href="https://github.com/CristianUrbainski/cdi-teste/">https://github.com/CristianUrbainski/cdi-teste/</a></p>
+
+<p>Vocês podem fazer o fork do projeto e roda-lo na sua máquina, apenas lembre-se de usar o servidor web Glassfish para isso, lá haverá exemplos de todos os componentes, eu ainda estou desenvolvendo o projeto, se precisarem de algum exemplo que ainda não exista no projeto podem falar comigo.</p>
 
 <h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a name="contribui%C3%A7%C3%B5es" class="anchor" href="#contribui%C3%A7%C3%B5es"><span class="octicon octicon-link"></span></a>Contribuições</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>Vocês podem ajudar o projeto a crescer e ficar melhor e mais bonito, contribuições da comunidade são sempre bem vindas, se você que contribuir é porque você que ajudar a comunidade open-source a crescer e também ajudar este projeto a crescer.</p>
 
 <h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a name="contato" class="anchor" href="#contato"><span class="octicon octicon-link"></span></a>Contato</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>Qualquer dúvida vocês podem entrar em contato comigo através do meu e-mail: <a href="mailto:cristianurbainskips@gmail.com">cristianurbainskips@gmail.com</a>, espero que este projeto possa ajudar muitas pessoas e que possa crescer e ficar a cada dia que passar melhor.</p>
         </section>
 
         <aside id="sidebar">
